--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js",
+    "start": "npm run generate && ts-node ./src/index.ts",
+    "generate": "ts-node ./src/generator/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,10 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.1.0",
+    "code-block-writer": "^11.0.3",
     "graphql": "^16.6.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "ts-morph": "^16.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
